@@ -1,3 +1,7 @@
+
+* BUGFIX: remove expired films should remove films created more than 60 days ago
+          not created 60 days in the future - doh
+
 30 Mar 2009 - version 0.2.1
 ---------------------------
 
